# vision

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  attention.py  config.yaml  inference.py  pyproject.toml  run.py  train.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  test.yaml
configs/: default.yaml
configs/architecture/: base.yaml  large.yaml  small.yaml  timm_vit_base.yaml  timm_vit_large.yaml  timm_vit_small.yaml
src/groovis/: loss.py  module.py  schema.py  train.py  types.py  utils.py  vision.py
src/groovis/configs/: __init__.py  architecture.py  datamodule.py  loss.py  optimizer.py  scheduler.py  trainer.py
src/groovis/configs/models/: __init__.py  mixer.py  parallel.py  timm_model.py  vit.py
src/groovis/configs/models/components/: act_layer.py  layer_norm.py
src/groovis/data/: __init__.py  augmentation.py  datamodule.py  dataset.py
src/groovis/models/: __init__.py  architecture.py  mixer.py  module.py  vit.py
src/groovis/models/components/: layer_norm.py  patch_embed.py
tests/: test_loss.py  test_vision.py
